# MeshViewer

./: CMakeLists.txt  LICENSE  MeshViewer.pro  README.md  UVChecker.frag  UVChecker.vert  UvCheckerMaterial.qml  VertexColor.frag  VertexColor.vert  VertexColorMaterial.qml  ViewerMenuBar.qml  colordialoghelper.cpp  colordialoghelper.h  filedialoghelper.cpp  filedialoghelper.h  geometrygenerator.cpp  geometrygenerator.h  main.cpp  main.qml  mesh.cpp  mesh.h  meshinfo.cpp  meshinfo.h  meshviewerapplication.cpp  meshviewerapplication.h  qml.qrc  subsetdatatablemodel.cpp  subsetdatatablemodel.h  subsetlistmodel.cpp  subsetlistmodel.h
+nativemenubar/: ViewerMenuBar.qml
.github/workflows/: build.yml
